syntax = "proto3";

package notification;

option python_generic_services = true;

// Notification Service - управление оповещениями
service NotificationService {
    // Отправка оповещения
    rpc SendNotification(SendNotificationRequest) returns (NotificationResponse);
    
    // Получение оповещения
    rpc GetNotification(GetNotificationRequest) returns (NotificationResponse);
    
    // Получение истории оповещений
    rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);
    
    // Повторная отправка
    rpc ResendNotification(ResendRequest) returns (NotificationResponse);
    
    // Отправка оповещения о закупке
    rpc SendPurchaseNotification(PurchaseNotificationRequest) returns (NotificationResponse);
    
    // Отправка оповещения о низком запасе
    rpc SendLowStockNotification(LowStockNotificationRequest) returns (NotificationResponse);
}

message SendNotificationRequest {
    string type = 1;  // PURCHASE_CREATED, PURCHASE_DELIVERED, LOW_STOCK, REQUEST_FULFILLED, CUSTOM
    string recipient_email = 2;
    string subject = 3;
    string body = 4;
    map<string, string> metadata = 5;  // дополнительные данные
}

message NotificationResponse {
    string id = 1;
    string type = 2;
    string recipient_email = 3;
    string subject = 4;
    string body = 5;
    string status = 6;  // PENDING, SENT, FAILED
    string created_at = 7;
    string sent_at = 8;
    string error_message = 9;
}

message GetNotificationRequest {
    string notification_id = 1;
}

message ListNotificationsRequest {
    string type = 1;  // optional filter
    string status = 2;  // optional filter
    string recipient_email = 3;  // optional filter
    int32 page = 4;
    int32 page_size = 5;
}

message ListNotificationsResponse {
    repeated NotificationResponse notifications = 1;
    int32 total_count = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message ResendRequest {
    string notification_id = 1;
}

message PurchaseNotificationRequest {
    string order_id = 1;
    string material_name = 2;
    int32 quantity = 3;
    string supplier_name = 4;
    double total_price = 5;
    string expected_delivery = 6;
    repeated string recipient_emails = 7;  // Список получателей
}

message LowStockNotificationRequest {
    string material_id = 1;
    string material_name = 2;
    int32 current_quantity = 3;
    int32 min_threshold = 4;
    repeated string recipient_emails = 5;
}
